--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+## Archived
+
 This was a project created as the Non-exam Asessment part of my A-level Computer Science Course.
 Created to demonstrate my programming ability as part of the A-level Computer Science course, not necessarily for production.
 
